--- a/public/index.html
+++ b/public/index.html
@@ -1,20 +1,43 @@
+<!DOCTYPE html>
 <html>
 <head>
-    <title>socket</title>    
+    <title>socket</title> 
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+<link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
+
 </head>
 <body>
+    <div class="tweet">
+        <h3>test</h3>
+    </div>
     <ul id="list"></ul>
+    <script
+  src="https://code.jquery.com/jquery-3.1.1.slim.min.js"
+  integrity="sha256-/SIrNqv8h6QGKDuNoLGA4iret+kyesCkHGzVUUV0shc="
+  crossorigin="anonymous"></script>
+      <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script> 
     <script src="./socket.io.js"></script>
     <script>
         var socket = io.connect("http://localhost:3000");
-
+        var height = 0;
         socket.on('tweet', function(data){
             console.log(data);
-            var ul = document.getElementById("list");
-            var li = document.createElement("li");
-            li.appendChild(document.createTextNode(data.message));
-            ul.appendChild(li);
+            var $newbutton = $("<button/>")   // creates a div element
+                 .addClass("mdl-button mdl-js-button")   // add a class
+                 .html(data.message);
+            $newbutton.css("left", "1200px");
+            $newbutton.css("top", Math.round(Math.random() * 60) * 10 + "px");
+
+            // var div = document.createElement("button");
+            // div.appendChild(document.createTextNode(data.message));
+            // div.style.left = "1200px";
+            // // div.style.top = Math.round(Math.random() * 60) * 10 + "px";
+            // newbutton.style.left = "1200px";
+            // newbutton.style.top = Math.round(Math.random() * 60) * 10 + "px";
+            $("body").append($newbutton);
         });
     </script>
+
 </body>
 </html>
