--- a/public/index.html
+++ b/public/index.html
@@ -4,40 +4,53 @@
     <title>socket</title> 
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-<link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
 
 </head>
 <body>
-    <div class="tweet">
+    <main class="mdl-layout__content">
+        <div class="page-content mdl-grid">
+            <!-- Your content goes here -->
+            <div class="topbar mdl-grid">
+                <!-- Deletable Chip -->
+                <span class="mdl-chip mdl-chip--deletable">
+                    <span class="mdl-chip__text">Deletable Chip</span>
+                    <button type="button" class="mdl-chip__action"><i class="material-icons">cancel</i></button>
+                </span>
+                <span class="mdl-chip mdl-chip--deletable">
+                    <span class="mdl-chip__text">Deletable Chip2</span>
+                    <button type="button" class="mdl-chip__action"><i class="material-icons">cancel</i></button>
+                </span> 
+                <span class="mdl-chip mdl-chip--deletable">
+                    <span class="mdl-chip__text">Deletable Chip3</span>
+                    <button type="button" class="mdl-chip__action"><i class="material-icons">cancel</i></button>
+                </span> 
+                <!-- Simple Textfield -->
+                <form id="keywordform" action="#">
+                <div class="mdl-textfield mdl-js-textfield">
+                    <input class="mdl-textfield__input" type="text" id="keyword">
+                    <label class="mdl-textfield__label" for="keyword">Text...</label>
+                </div>
+                </form>
+            </div>
+
+            <div "canvas mdl-grid">
+
+            </div>
+        </div>
+    </main>
+    </div>
+
+    <!--<div class="tweet">
         <h3>test</h3>
     </div>
-    <ul id="list"></ul>
-    <script
-  src="https://code.jquery.com/jquery-3.1.1.slim.min.js"
-  integrity="sha256-/SIrNqv8h6QGKDuNoLGA4iret+kyesCkHGzVUUV0shc="
-  crossorigin="anonymous"></script>
-      <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script> 
-    <script src="./socket.io.js"></script>
-    <script>
-        var socket = io.connect("http://localhost:3000");
-        var height = 0;
-        socket.on('tweet', function(data){
-            console.log(data);
-            var $newbutton = $("<button/>")   // creates a div element
-                 .addClass("mdl-button mdl-js-button")   // add a class
-                 .html(data.message);
-            $newbutton.css("left", "1200px");
-            $newbutton.css("top", Math.round(Math.random() * 60) * 10 + "px");
+    <ul id="list"></ul>-->
 
-            // var div = document.createElement("button");
-            // div.appendChild(document.createTextNode(data.message));
-            // div.style.left = "1200px";
-            // // div.style.top = Math.round(Math.random() * 60) * 10 + "px";
-            // newbutton.style.left = "1200px";
-            // newbutton.style.top = Math.round(Math.random() * 60) * 10 + "px";
-            $("body").append($newbutton);
-        });
-    </script>
-
+    <script defer src="https://code.jquery.com/jquery-3.1.1.min.js"  crossorigin="anonymous"></script>
+    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script> 
+    <script defer src="socket.io.js"></script>
+    <script defer src="flyingtweets.js"></script> 
 </body>
 </html>
+
+
