--- a/public/index.html
+++ b/public/index.html
@@ -11,28 +11,28 @@
     <main class="mdl-layout__content">
         <div class="page-content mdl-grid">
             <!-- Your content goes here -->
-            <div class="topbar mdl-grid">
+            <div id="keywordbar" class="mdl-grid">
                 <!-- Deletable Chip -->
                 <span class="mdl-chip mdl-chip--deletable">
                     <span class="mdl-chip__text">Deletable Chip</span>
-                    <button type="button" class="mdl-chip__action"><i class="material-icons">cancel</i></button>
+                    <button type="button" class="mdl-chip__action delkeyword"><i class="material-icons">cancel</i></button>
                 </span>
                 <span class="mdl-chip mdl-chip--deletable">
                     <span class="mdl-chip__text">Deletable Chip2</span>
-                    <button type="button" class="mdl-chip__action"><i class="material-icons">cancel</i></button>
+                    <button type="button" class="mdl-chip__action delkeyword"><i class="material-icons">cancel</i></button>
                 </span> 
                 <span class="mdl-chip mdl-chip--deletable">
                     <span class="mdl-chip__text">Deletable Chip3</span>
-                    <button type="button" class="mdl-chip__action"><i class="material-icons">cancel</i></button>
-                </span> 
-                <!-- Simple Textfield -->
-                <form id="keywordform" action="#">
-                <div class="mdl-textfield mdl-js-textfield">
-                    <input class="mdl-textfield__input" type="text" id="keyword">
-                    <label class="mdl-textfield__label" for="keyword">Text...</label>
-                </div>
-                </form>
+                    <button type="button" class="mdl-chip__action delkeyword"><i class="material-icons">cancel</i></button>
+                </span>
             </div>
+            <!-- Simple Textfield -->
+            <form id="keywordform" action="#">
+            <div class="mdl-textfield mdl-js-textfield">
+                <input class="mdl-textfield__input" type="text" id="keyword">
+                <label class="mdl-textfield__label" for="keyword">Text...</label>
+            </div>
+            </form>
 
             <div "canvas mdl-grid">
 
@@ -40,11 +40,6 @@
         </div>
     </main>
     </div>
-
-    <!--<div class="tweet">
-        <h3>test</h3>
-    </div>
-    <ul id="list"></ul>-->
 
     <script defer src="https://code.jquery.com/jquery-3.1.1.min.js"  crossorigin="anonymous"></script>
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script> 
