--- a/public/index.html
+++ b/public/index.html
@@ -22,9 +22,7 @@
             </div>
             </form>
 
-            <div "canvas mdl-grid">
-
-            </div>
+            <div "canvas mdl-grid"></div>
         </div>
     </main>
     </div>
