--- a/public/index.html
+++ b/public/index.html
@@ -22,10 +22,10 @@
             </div>
             </form>
 
-            <div "canvas mdl-grid"></div>
+            <div "canvas mdl-grid">
+            </div>
         </div>
     </main>
-    </div>
 
     <script defer src="https://code.jquery.com/jquery-3.1.1.min.js"  crossorigin="anonymous"></script>
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script> 
