no decoration for <a/>

--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,10 @@
 
             <div "canvas mdl-grid">
             </div>
+
+            <div id="bottom" class="mdl-grid">
+                
+            </div>
         </div>
     </main>
 
@@ -36,15 +40,7 @@
     <script defer src="socket.io.js"></script>
     <script defer src="flyingtweets.js"></script> 
 </body>
-<footer>
-     <div class="mdl-tabs mdl-js-tabs mdl-js-ripple-effect footer">
-      <div class="mdl-tabs__tab-bar">
-        <li><a href="#">Help</a>
-        <li><a href="#">Privacy and Terms</a></li>
-        <li><a href="#">User Agreement</a></li>
-      </div>
-    </div>
-</footer>
+
 </html>
 
 
